tests/NormalTests/paczka1/small_fuzzy/70992167.err
Error in line 2: XbenCwxG A488 28,5
Error in line 15: XbenCwxG A488 21,18
